@@ -12,6 +12,7 @@
 - Change: Complete refactor of the rendering mechanism.
 - Change: Ported the javascript to type script.
 - Bugfix: Missing encoding info in the error handler output
+- Bugfix: Wrong null values for dynamically declared properties
 
 3.1.0
 - Use some real autoloading, with a fallback to manually including
